--- a/calico-enterprise/reference/resources/felixconfig.mdx
+++ b/calico-enterprise/reference/resources/felixconfig.mdx
@@ -63,6 +63,7 @@ spec:
 | interfacePrefix                       | The interface name prefix that identifies workload endpoints and so distinguishes them from host endpoint interfaces. Note: in environments other than bare metal, the orchestrators configure this appropriately. For example our Kubernetes and Docker integrations set the 'cali' value, and our OpenStack integration sets the 'tap' value.                                                                                                                                                                                                                                                                                                                                                                                                           | string                                                             | string                                  | `cali`                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | ipipEnabled                           | Optional, you shouldn't need to change this setting as Felix calculates if IPIP should be enabled based on the existing IP Pools. When set, this overrides whether Felix should configure an IPinIP interface on the host. When explicitly disabled in FelixConfiguration, Felix will not clean up addresses from the `tunl0` interface (use this if you need to add addresses to that interface and don't want to have them removed).                                                                                                                                                                                                                                                                                                                    | `true`, `false`, unset                                             | optional boolean                        | unset                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | ipipMTU                               | The MTU to set on the tunnel device. Zero value means auto-detect. See [Configuring MTU](../../networking/configuring/mtu.mdx)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | int                                                                | int                                     | `0`                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| ipForwarding                          | Controls whether Felix sets the host sysctls to enable IP forwarding.  IP forwarding is required   when using Calico for workload networking.  This should only be disabled on hosts where Calico is used for host protection.   | `Enabled`, `Disabled`                                        | string                                  | `Enabled`                                                    |
 | ipsetsRefreshInterval                 | Period at which Felix re-checks the IP sets in the dataplane to ensure that no other process has accidentally broken {{prodname}}'s rules. Set to 0 to disable IP sets refresh.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | `5s`, `10s`, `1m` etc.                                             | duration                                | `10s`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | iptablesFilterAllowAction             | This parameter controls what happens to traffic that is accepted by a Felix policy chain in the iptables filter table (i.e. a normal policy chain). The default will immediately `Accept` the traffic. Use `Return` to send the traffic back up to the system chains for further processing.                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Accept, Return                                                     | string                                  | `Accept`                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | iptablesBackend                       | This parameter controls which variant of iptables Felix uses. If using Felix on a system that uses the netfilter-backed iptables binaries, set this to `nft`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | Legacy, nft                                                        | string                                  | automatic detection                                                                                                                                                                                                                                                                                                                                                                                                                               |
