--- a/calico/reference/felix/configuration.mdx
+++ b/calico/reference/felix/configuration.mdx
@@ -194,7 +194,7 @@ See the [HOWTO guide](../../operations/ebpf/enabling-ebpf.mdx) for step-by step 
 | BPFMapSizeIPSets / <br/> FELIX_BPFMapSizeIPSets                                     | Controls the size of the IPSets map. The IP sets map must be large enough to hold an entry for each endpoint matched by every selector in the source/destination matches in network policy. Selectors such as "all()" can result in large numbers of entries (one entry per endpoint in that case).                                                                               | int                   | 1048576 |
 | BPFMapSizeRoute / <br/> FELIX_BPFMapSizeRoute                                       | Controls the size of the route map. The routes map should be large enough to hold one entry per workload and a handful of entries per host (enough to cover its own IPs and tunnel IPs).                                                                                                                                                                                          | int                   | 262144  |
 | BPFHostConntrackBypass / <br/> FELIX_BPFHostConntrackBypass                         | Controls whether to bypass Linux conntrack in BPF mode for workloads and services.                                                                                                                                                                                                                                                                                                | true,false            | true    |
-| BPFEnforceRPF / <br/>  FELIX_BPFEnforceRPF                                          | Controls RPF on all host interfaces with BPF programs regardless of what is the per-interfaces or global setting. To prevent spoofing, we also enforce it in IPv6 mode. Possible values are `Disabled`, `Strict` or `Loose`.                                                                                                                                                      | string                | "Loose" |
+| BPFEnforceRPF / <br/>  FELIX_BPFEnforceRPF                                          | Controls RPF on all host interfaces with BPF programs regardless of the interface or global settings. To prevent spoofing, we also enforce it in IPv6 mode. Possible values are `Disabled`, `Strict` or `Loose`.                                                                                                                                                      | string                | "Loose" |
 
 | BPFPolicyDebugEnabled / <br/> FELIX_BPFPOLICYDEBUGENABLED                           | In eBPF dataplane mode, Felix records detailed information about the BPF policy programs, which can be examined with the calico-bpf command-line tool.                                                                                                                                                                                                                            | true, false           | true    |
 | BPFForceTrackPacketsFromIfaces / <br/> FELIX_BPFFORCETRACKPACKETSFROMIFACES         | In BPF mode, forces traffic from these interfaces to skip Calico's iptables NOTRACK rule, allowing traffic from those interfaces to be tracked by Linux conntrack.  Should only be used for interfaces that are not used for the Calico fabric.  For example, a Docker bridge device for non-Calico-networked containers. [Default: docker+]                                      | string                | "docker+" |
