--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -10,34 +10,23 @@ Application layer policies let you configure access controls based on L7 attribu
 
 ### Limitations
 
-* Our L7 features are currently not compatible with a service mesh such as Istio.
-* Application layer policy can restrict only ingress traffic.
+* Application layer policy is not compatible with a service mesh such as Istio.
+* Application layer policy can restrict only _ingress_ traffic.
   It can not restrict egress traffic.
-* Support for L7 attributes are limited to HTTP method and URL exact/prefix path.
+* Support for L7 attributes is limited to HTTP method and URL exact/prefix path.
 * Supported protocols are limited to TCP-based protocols (for example, HTTP, HTTPS, or gRPC).
-* You can control application layer policies only at the cluster level (not per namespace).
+* Application layer policies apply to the entire cluster.
+  They can not be namespaced.
 
-## How to
-* [Enable application layer policies](#enable-application-layer-policies)
-* [Enforce application layer policies for ingress traffic](#enforce-application-layer-policies-for-ingress-traffic)
-* [Disable application layer policies](#disable-application-layer-policies)
+:::important
 
-### Enable application layer policies (ALP)
-In the ApplicationLayer custom resource, set the `applicationLayerPolicy` field to Enabled for Envoy as a DaemonSet, for using sidecars you will need to set the `sidecarInjection` field to Enabled and label and annotate the pods will have the packets analised.
+When you enable application layer policy for a deployment, all of that deployment's pods will restart.
 
-For **Envoy as Daemonset**:
+:::
 
-```yaml
-apiVersion: operator.tigera.io/v1
-kind: ApplicationLayer
-metadata:
-  name: tigera-secure
-spec:
-  applicationLayerPolicy: Enabled
-  
-```
+### Enable application layer policy (ALP)
 
-For **sidecar**:
+In the ApplicationLayer custom resource, set the `sidecarInjection` field to `Enabled`:
 
 ```yaml
 apiVersion: operator.tigera.io/v1
@@ -48,7 +37,7 @@ spec:
   sidecarInjection: Enabled
 ```
 
-You can patch your deployments enabling sidecar with ALP option:
+Patch your deployments by running the following command:
 
 ```bash
 kubectl patch deployment <deployment-name> -n <deployment-namespace> -p '{"spec":{"template":{"metadata":{"labels":{"applicationlayer.projectcalico.org/sidecar":"true"},"annotations":{"applicationlayer.projectcalico.org/policy":"Enabled"}}}}}'
@@ -78,11 +67,11 @@ spec:
   egress:
     - action: Allow
 ```
+
 ### Disable application layer policies
 
 To disable the policies, do one of the following steps:
-* For sidecar mode, recreate your application pods without the sidecar label and annotations.
-* For Envoy as DaemonSet mode, set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
+* Recreate your application pods without the sidecar label and annotations.
 * Remove the `applicationLayerPolicy` field entirely.
 * Remove the `sidecarInjection` field entirely, if sidecar mode was being used only for ALP.
 * Delete the ApplicationLayer` custom resource if only ALP was enabled on it.
